--- a/Assignments/dfarnsworth/Quiz Form/TemplateQuizForm.css
+++ b/Assignments/dfarnsworth/Quiz Form/TemplateQuizForm.css
@@ -76,16 +76,16 @@ body, html{
 	margin-left: 12px;
 	margin-top: 213px;
 	border-radius: 26px;
+	width: 203px;
 	text-align: center;	
 	font-family: Helvetica;
 }
 
 .sub1{
 	background-color: black;
+	color: white;
 	height: relative;
 	font-size: 12px;
-	color: white;
-	font-weight: bold;
 	padding: 12px;
 	padding-left: 34px;
 	padding-right: 34px;
@@ -102,12 +102,12 @@ body, html{
 	padding-top: 215px;
 	padding-left: 140px;
 	padding-bottom: 3000px;
-	color: white;
-	font-family: Helvetica;
 }
 
 .form_container{
 	background-color: #333;
+	color: white;
+	font-family: Helvetica;
 	text-align: center;
 	height: relative;
 	width: 88%;
@@ -163,9 +163,20 @@ input{
 	margin: 20px;
 }
 
-a:hover{
-	font-weight: bold;
+a:link{
+	text-decoration: none;
 }
+
+a:hover{
+	text-decoration: none;
+	font-weight: bolder;
+}
+
+a:visited{
+	background-color: red;
+}
+
+
 
 h2{
 	text-align: center;
