--- a/Assignments/dfarnsworth/JS/TemplateQuizForm.css
+++ b/Assignments/dfarnsworth/JS/TemplateQuizForm.css
@@ -167,15 +167,23 @@ a:link{
 	text-decoration: none;
 }
 
-a:hover{
-	text-decoration: none;
+.title a{
+	color: white;
+}
+
+.title a:hover{
+	color: black;
+}
+
+a:hover div{
 	font-weight: bolder;
+	background-color: #c25331;
+	border-color: black;
 }
 
-a:visited{
+a:visited div{
+
 }
-
-
 
 h2{
 	text-align: center;
