--- a/InClassActivities/Layout/site.css
+++ b/InClassActivities/Layout/site.css
@@ -4,6 +4,7 @@ html, body
 	padding:0;
 	height:100%;
 	width:100%;
+	background-color: #9CBCDA;
 }
 
 .container
@@ -12,13 +13,17 @@ html, body
 	height:100%;
 	margin:0 auto;
 	background-color: lime;
+	box-shadow: 0px 6px 10px 2px rgba(0, 0, 0, 0.35);
+	position: relative;
 }
 
 .menu-container
 {
 	height:60px;
-	width:100%;
+	width:76%;
 	background-color: #3B44AD;
+	position:fixed;
+	top:0;
 }
 
 
@@ -31,6 +36,7 @@ html, body
 .list-inline li
 {
 	display: inline-block;
+	
 }
 
 .menu
@@ -39,10 +45,31 @@ html, body
 	margin:0;
 	padding:0;
 	line-height:60px;
+	
 }
 .menu > li
 {
 	padding: 0 8px;
+	width:120px;
+	cursor: pointer;
+	background-color: #3B44AD;
+	transition: all 0.5s ease;
+}
+
+.menu > li:hover
+{
+	width:200px;
+	background-color:red;
+}
+
+.menu > li:hover ~ li
+{
+	width:100px;
+}
+
+.menu > li:first-child .menu-item
+{
+	color:#3B44AD;
 }
 
 .menu > li:first-child
@@ -55,7 +82,15 @@ html, body
 	color:#3B44AD;
 }
 
+
+
 .menu li .menu-item
 {
 	color:#E3B11F;
+}
+
+.content
+{
+	width:100%;
+	background-color: white;
 }
