--- a/Assignments/DConner/SadSadPlaceholder/FormanGriddle/Index/masterwork.css
+++ b/Assignments/DConner/SadSadPlaceholder/FormanGriddle/Index/masterwork.css
@@ -96,4 +96,17 @@ ul li
 
 /* Moving Away from the Above */
 
-/* delete this before submitting */
+.freeman{
+   display: none;
+   z-index: 5;
+}
+.one{
+}
+.two{
+}
+.three{
+}
+.four{
+}
+.five{
+}
