--- a/Assignments/DConner/nChannel/vCHENAL/daCSSyo.css
+++ b/Assignments/DConner/nChannel/vCHENAL/daCSSyo.css
@@ -48,7 +48,18 @@ font-weight: bold
 margin-left: 20%;
 margin-right: 20%;
 }
-
+.persist{
+position: fixed;
+}
 .whiteText{
 color: white;
+}
+.righty{
+float: right;
+}
+.lefty{
+float: left;
+}
+.full{
+width: 100%;
 }
