MORE BLAHHH NCHANNEL

--- a/Assignments/akanios/nChannel Mimic/site.css
+++ b/Assignments/akanios/nChannel Mimic/site.css
@@ -150,3 +150,33 @@ li
 	border-top-right-radius: 10px;
 	border-bottom-left-radius: 10px;
 }
+
+.logos
+{
+	width: 1663px;
+	height: 167px;
+	background-color: #f4f4f4;
+	padding: 30px 0;
+	text-align: center;
+	top: 280px;
+	position: relative;
+}
+
+.footer
+{
+	position: relative;
+	width: 1663px;
+	height: 315px;
+	background-color: #3b3e4b;
+	top:280px;
+
+}
+
+.copyright
+{
+	position: relative;
+	width: 1663px;
+	height: 61px;
+	background-color: #333643;
+	top: 280px;
+}
