--- a/Assignments/dfarnsworth/Recreate nChannel/Recreate nChannel.css
+++ b/Assignments/dfarnsworth/Recreate nChannel/Recreate nChannel.css
@@ -31,9 +31,14 @@ body, html{
 	z-index: 10;
 }
 
+.header-fixed img{
+	height: 58.5%;
+}
+
 #logo{
-	padding-left: 200px;
-	padding-top: 8px;
+	padding-left: 205px;
+	padding-top: 12px;
+	cursor: pointer;
 }
 
 .header-fixed div{
