--- a/Assignments/clinville/NChannel/nchannel_styles.css
+++ b/Assignments/clinville/NChannel/nchannel_styles.css
@@ -12,6 +12,8 @@ body
 	z-index: 3;
 	width: 100%;
 	height: 35px;
+	text-align: right;
+	color: grey;
 }
 
 .darktop
@@ -21,6 +23,8 @@ body
 	z-index: 2;
 	width: 100%;
 	height: 120px;
+	text-align: right;
+	color: grey;
 }
 
 .greytop
@@ -30,6 +34,8 @@ body
 	z-index: 1;
 	width: 100%;
 	height: 175px;
+	text-align: right;
+	color: grey;
 }
 
 .maindiv
