--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.css
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.css
@@ -33,9 +33,13 @@ header{
 
 header img{
 	display: inline-block;
+	padding-top: 13px;
 	margin-left: 205px;
-	padding-top: 20px;
 	transition: all 0.2s ease;
+}
+
+.inlines{
+	display: inline-block;
 }
 
 header.shrink{
@@ -43,8 +47,9 @@ header.shrink{
 }
 
 header.shrink img{
+	padding-bottom: 16px;
+	padding-top: 0;
 	width: 110px;
-	padding-top: 12px;
 	transition: all 0.2s ease;
 }
 
@@ -57,6 +62,33 @@ div#poof{
 
 div#poof.show{
 	height: 0;
+}
+
+.rmen{
+	margin-top: 18px;
+	color: grey;
+	display: inline-block;
+	text-decoration: none;
+
+}
+
+.rmen h5:hover{
+	color: white;
+	transition: all .5s ease;
+}
+
+.rmen:hover{
+	text-decoration: none;
+	color: white;
+	text-decoration: none;
+}
+
+#np.nopad{
+	padding-top: ;
+}
+
+.nopad{
+	padding-top: ;
 }
 
 /*
