--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.css
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.css
@@ -77,7 +77,7 @@ div#poof.show{
 
 .rmen h5:hover{
 	color: white;
-	transition: all 5s ease;
+	transition: all .2s ease;
 }
 
 .rmen:hover{
@@ -102,7 +102,7 @@ div#poof.show{
 	position: fixed;
 	z-index: 10;
 }
-*/
+s
 
 }
 .header-fixed img{
@@ -140,12 +140,44 @@ div#poof.show{
 	line-height: 40px;
 	font-weight: 900;
 }
+*/
+
+#hbtn{
+	position: fixed;
+	float: right;
+}
+
+.sbtn{
+	color: white;
+	padding: 8px 10px;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	font-family: Helvetica;
+	font-size: 16px;
+	font-weight: bold;
+	font-style: italic;
+}
+
+#hbtn.btop{
+	padding-top: 120px;
+	transition: all .2s ease;
+}
+
+#hbtn.smtop{
+	padding-top: 56px;
+	transition: all .2s ease;
+}
+
+.navbtn{
+	display: inline-block;
+}
 
 .intro{
 	font-family: Times;
 	text-align: center;
 	color: white;
-	padding-top: 130px;
+	padding-top: 175px;
+	padding-bottom: 520px;
 	background-color: #9cdcf2;
 	height: 650px;
 }
