--- a/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.css
+++ b/Assignments/dfarnsworth/Bootstrap nChannel/Recreate nChannel/Bootstrap_nChannel.css
@@ -28,14 +28,14 @@ header{
 	width: 100%;
 	position: fixed;
 	z-index: 10;	
-	transition: all 0.2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 
 header img{
 	display: inline-block;
 	margin-bottom: 5px;
 	margin-left: 205px;
-	transition: all 0.2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 
 .inlines{
@@ -46,25 +46,30 @@ header.shrink{
 	height: 56px;
 	position: fixed;
 	z-index: 10;
-	transition: all 0.2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 
 header.shrink img{
 	padding-top: 12px;
 	width: 110px;
-	transition: all 0.2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 
 div#poof{
 	width: 100%;
 	height: 35px;
 	background-color: #353845;
-	transition: all 0.2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 
 div#poof.show{
 	height: 0;
-	transition: all 0.2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
+
+.fxdhdr{
+	position: relative;
+	z-index: 100;
 }
 
 .ullink{
@@ -102,7 +107,7 @@ div#poof.show{
 	text-decoration: underline;
 }
 
-.rmen h5:hover{
+.rmen:hover h5{
 	color: white;
 	transition: all .2s ease-in-out;
 }
@@ -142,7 +147,7 @@ div#poof.show{
 
 .pad{
 	padding-top: 27px;
-	transition: all 0.2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 
 /*
@@ -196,6 +201,7 @@ s
 #hbtn{
 	position: fixed;
 	float: right;
+	z-index: 9;
 }
 
 .sbtn{
@@ -257,9 +263,30 @@ s
 	background-color: #ee7541;
 	cursor: pointer;
 	color: white;
+	text-shadow: none;
 }
 
 .button:hover{
+	background-color: #5d5d5d;
+	transition: all .2s ease-in-out;
+}
+
+.button2{
+	padding: 1.3px 20px;
+	float: left;
+	display: block;
+	line-height: 40px;
+	border-top-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+	font-style: italic;
+	font-family: Helvetica;
+	background-color: #00b2ee;
+	cursor: pointer;
+	color: white;
+	text-shadow: none;
+}
+
+.button2:hover{
 	background-color: #5d5d5d;
 	transition: all .2s ease-in-out;
 }
@@ -289,10 +316,49 @@ s
 	height: 600px;
 }
 
+.dark{
+	color: #6b6b6b;
+	font-family: Times;
+	font-size: 21px;
+	text-shadow: 1px 0 #6b6b6b;
+	margin-left: 10px;
+}
+
+.caps{
+	color: #ee7541;
+	font-family: Helvetica;
+	text-shadow: 1px 0 #ee7541;
+	margin-left: 10px;
+}
+
+.light{
+	color: #6b6b6b;
+	margin-left: 10px;
+}
+
 .explore{
 	background-color:  #f4f4f4;
 	height: 600px;
+	font-family: Times;
+	padding-top: 55px;
+	color: #6b6b6b;
+	font-weight: bold;
 
+}
+
+.explore h2{
+	text-align: center;
+	padding-bottom: 30px;
+}
+
+.Farnsworth{
+	height: 58px;
+	background-color: #9cdcf2;
+}
+
+.Farnsworthr{
+	height: 58px;
+	background-color: #9cdcf2;
 }
 
 .we-can-help{
