Title Page Avengers
More completed

--- a/Assignments/abrand/Final Project Avengers/site(10).css
+++ b/Assignments/abrand/Final Project Avengers/site(10).css
@@ -8,19 +8,34 @@
 	font-family: "avenger";
 }
 
-div
+.bgblack
 {
-	width:100%;
-	background-color: rgb(8, 64, 112);
+	background-color: black !important;
 }
+
 
 span 
 {
-	font-size: 230pt;
+	font-size: 110pt;
 }
 
-img 
+.star 
 {
 	width:100%;
 	background-color: rgb(8, 64, 112);
+	
+	text-align: center;
+}
+
+.fadetop
+{
+	background: #1d3d93; /* Old browsers */
+background: -moz-linear-gradient(top, #1d3d93 2%, #000000 66%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#1d3d93), color-stop(66%,#000000)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #1d3d93 2%,#000000 66%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #1d3d93 2%,#000000 66%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, #1d3d93 2%,#000000 66%); /* IE10+ */
+background: linear-gradient(to bottom, #1d3d93 2%,#000000 66%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d3d93', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+copy
 }
