--- a/Assignments/abrand/Final Project Avengers/site(10).css
+++ b/Assignments/abrand/Final Project Avengers/site(10).css
@@ -30,12 +30,25 @@ span
 .fadetop
 {
 	background: #1d3d93; /* Old browsers */
-background: -moz-linear-gradient(top, #1d3d93 2%, #000000 66%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#1d3d93), color-stop(66%,#000000)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #1d3d93 2%,#000000 66%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #1d3d93 2%,#000000 66%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, #1d3d93 2%,#000000 66%); /* IE10+ */
-background: linear-gradient(to bottom, #1d3d93 2%,#000000 66%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d3d93', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-copy
+	background: -moz-linear-gradient(top, #1d3d93 2%, #000000 66%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#1d3d93), color-stop(66%,#000000)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #1d3d93 2%,#000000 66%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #1d3d93 2%,#000000 66%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #1d3d93 2%,#000000 66%); /* IE10+ */
+	background: linear-gradient(to bottom, #1d3d93 2%,#000000 66%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d3d93', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+
+}
+
+.fadebottom
+{
+	background: #000000; /* Old browsers */
+	background: -moz-linear-gradient(top, #000000 14%, #000000 62%, #000000 62%, #1d3d93 81%, #1d3d93 90%, #1d3d93 90%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(14%,#000000), color-stop(62%,#000000), color-stop(62%,#000000), color-stop(81%,#1d3d93), color-stop(90%,#1d3d93), color-stop(90%,#1d3d93)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #000000 14%,#000000 62%,#000000 62%,#1d3d93 81%,#1d3d93 90%,#1d3d93 90%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #000000 14%,#000000 62%,#000000 62%,#1d3d93 81%,#1d3d93 90%,#1d3d93 90%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #000000 14%,#000000 62%,#000000 62%,#1d3d93 81%,#1d3d93 90%,#1d3d93 90%); /* IE10+ */
+	background: linear-gradient(to bottom, #000000 14%,#000000 62%,#000000 62%,#1d3d93 81%,#1d3d93 90%,#1d3d93 90%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#1d3d93',GradientType=0 ); /* IE6-9 */
+
 }
