--- a/Assignments/abrand/Final Project Avengers/site(10).css
+++ b/Assignments/abrand/Final Project Avengers/site(10).css
@@ -1,3 +1,8 @@
+html
+{
+	background-color: midnightblue;
+}
+
 @font-face {
   font-family: 'avenger';
   src: url('avenger.otf');
@@ -43,12 +48,13 @@ span
 .fadebottom
 {
 	background: #000000; /* Old browsers */
-	background: -moz-linear-gradient(top, #000000 14%, #000000 62%, #000000 62%, #1d3d93 81%, #1d3d93 90%, #1d3d93 90%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(14%,#000000), color-stop(62%,#000000), color-stop(62%,#000000), color-stop(81%,#1d3d93), color-stop(90%,#1d3d93), color-stop(90%,#1d3d93)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #000000 14%,#000000 62%,#000000 62%,#1d3d93 81%,#1d3d93 90%,#1d3d93 90%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #000000 14%,#000000 62%,#000000 62%,#1d3d93 81%,#1d3d93 90%,#1d3d93 90%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #000000 14%,#000000 62%,#000000 62%,#1d3d93 81%,#1d3d93 90%,#1d3d93 90%); /* IE10+ */
-	background: linear-gradient(to bottom, #000000 14%,#000000 62%,#000000 62%,#1d3d93 81%,#1d3d93 90%,#1d3d93 90%); /* W3C */
+	background: -moz-linear-gradient(top, #000000 55%, #0c1a3f 78%, #1d3d93 90%, #1d3d93 90%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(55%,#000000), color-stop(78%,#0c1a3f), color-stop(90%,#1d3d93), color-stop(90%,#1d3d93)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #000000 55%,#0c1a3f 78%,#1d3d93 90%,#1d3d93 90%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #000000 55%,#0c1a3f 78%,#1d3d93 90%,#1d3d93 90%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #000000 55%,#0c1a3f 78%,#1d3d93 90%,#1d3d93 90%); /* IE10+ */
+	background: linear-gradient(to bottom, #000000 55%,#0c1a3f 78%,#1d3d93 90%,#1d3d93 90%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#1d3d93',GradientType=0 ); /* IE6-9 */
+
 
 }
