--- a/nChanel Bstrap Pat Cheek/nChanpartial.css
+++ b/nChanel Bstrap Pat Cheek/nChanpartial.css
@@ -1,53 +1,46 @@
 .mainContainer
 {
-	height:60%;
+	height:66%;
 	width:100%;
-	background:lightblue;
+	background:rgb(156,220,242);
 }
-.quoteButton
+
+.centerAd
 {
-	height:auto;
 	width:auto;
-	float:right;
-	background:rgb(0,178,238);
-	border-radius:5px;
-	font-size:20;
-	color:white;
-	padding-top:0.5%;
-	padding-bottom:0.5%;
-}
-.phone
-{
 	height:auto;
-	width:auto;
-	float:right;
-	background:orange;
-	border-radius:5px;
-	font-size:20;
+	font-size:30;
+	background:rgb(156,220,242);
 	color:white;
-	padding-top:0.5%;
-	padding-bottom:0.5%;
+	padding-left:15%;
+	padding-top:8%;
+	padding-right:15%;
 }
 .spacer
 {
-	float:right;
-	padding-left:0.5%;
-	color:lightblue;
-}
-.centerAd
-{
-	height:50%;
-	width:50%;
-	font-size:30;
-	background:lightblue;
-	color:white;
-	padding-left:25%;
-	padding-top:15%;
-	padding-right:5%;
+	padding-bottom:2%;
 }
 .learnMore
 {
+	background:rgb(238,117,65);
+	width:20%;
 	height:auto;
-	width:auto;
-	background:orange;
+	font-size:25;
+	border-radius:10px;
+}
+.multiChannel
+{
+	padding-top:5%;
+	padding-left:13%;
+	
+}
+.complicated
+{
+	width:100%;
+	height:10%;
+	color:white;
+	background:rgb(238,117,65);
+	text-align:center;
+	font-size:25;
+	padding-top:3%;
 }
