--- a/nChanel Bstrap Pat Cheek/nChanpartial.css
+++ b/nChanel Bstrap Pat Cheek/nChanpartial.css
@@ -12,6 +12,7 @@
 	font-size:30;
 	background:rgb(156,220,242);
 	color:white;
+
 	padding-left:15%;
 	padding-top:8%;
 	padding-right:15%;
@@ -27,6 +28,7 @@
 	height:auto;
 	font-size:25;
 	border-radius:10px;
+
 }
 .multiChannel
 {
@@ -41,6 +43,11 @@
 	color:white;
 	background:rgb(238,117,65);
 	text-align:center;
-	font-size:25;
-	padding-top:3%;
+	font-size:75;
+	padding-top:2%;
+	padding-bottom:2%;
+}
+.features
+{
+	height:100;
 }
