--- a/nChanel Bstrap Pat Cheek/nChanpartial.css
+++ b/nChanel Bstrap Pat Cheek/nChanpartial.css
@@ -28,7 +28,11 @@
 	height:auto;
 	font-size:25;
 	border-radius:10px;
-
+	transition:1s;
+}
+.learnMore:hover
+{
+	background:rgb(59,62,75);
 }
 .multiChannel
 {
@@ -43,11 +47,37 @@
 	color:white;
 	background:rgb(238,117,65);
 	text-align:center;
-	font-size:75;
+	font-size:35;
 	padding-top:2%;
 	padding-bottom:2%;
 }
+.featuresContainer
+{
+	width:100%;
+	height:45%;
+	background:yellow;
+}
 .features
 {
-	height:100;
+	height:auto;
+	width:auto;
+	background:white;
+}
+
+.viewFeatures
+{
+	height:auto;
+	width:20%;
+	background:rgb(34,176,230);
+	color:white;
+	text-align:center;
+	padding-top:1%;
+	padding-bottom:1%;
+	border-radius:5px;
+	transition:1s;
+
+}
+.viewFeatures:hover
+{
+	background:rgb(59,62,75);
 }
