--- a/nChanel Bstrap Pat Cheek/nChanpartial.css
+++ b/nChanel Bstrap Pat Cheek/nChanpartial.css
@@ -13,7 +13,7 @@
 	background:rgb(156,220,242);
 	color:white;
 
-	padding-left:15%;
+	padding-left:25%;
 	padding-top:8%;
 	padding-right:15%;
 }
@@ -26,8 +26,10 @@
 	background:rgb(238,117,65);
 	width:20%;
 	height:auto;
-	font-size:25;
-	border-radius:10px;
+	font-size:30;
+	padding:7px 7px;
+	border-radius:0px 10px 0px 10px;
+	cursor:pointer;
 	transition:1s;
 }
 .learnMore:hover
@@ -38,6 +40,7 @@
 {
 	padding-top:5%;
 	padding-left:13%;
+
 	
 }
 .complicated
@@ -73,11 +76,50 @@
 	text-align:center;
 	padding-top:1%;
 	padding-bottom:1%;
-	border-radius:5px;
+	border-radius:0px 7px 0px 7px;
 	transition:1s;
 
 }
 .viewFeatures:hover
 {
 	background:rgb(59,62,75);
+	cursor:pointer;
+}
+.helpBar
+{
+	position:fixed;
+	height:30px;
+	width:100%;
+	top:72px;
+	background-color:rgb(156,220,242);
+	color:white;
+}
+
+.helpButtonOne
+{
+	float:right;
+	margin-right:15px;
+	margin-left:15px;
+	padding:5px 5px;
+	background:orange;
+	border-radius: 0px 0px 5px 5px;
+	transition:1s;
+}
+.helpButtonOne:hover
+{
+	background-color:rgb(241,224,14);
+	cursor:pointer;
+}
+.helpButtonTwo
+{
+	float:right;
+	padding:5px 5px;
+	border-radius: 0px 0px 5px 5px;
+	background-color:rgb(34,176,230);
+	transition:1s;
+}
+.helpButtonTwo:hover
+{
+	background-color:rgb(241,241,14);
+	cursor:pointer;
 }
