--- a/Assignments/shinzman/Final/finalShield.css
+++ b/Assignments/shinzman/Final/finalShield.css
@@ -4,7 +4,7 @@ html, body
 	padding:0;
 	height:100%;
 	width:100%;
-	background-color: black;
+	background-color: lightgrey;
 }
 .row
 {
@@ -28,7 +28,7 @@ html, body
 {
 	height: 90%;
 	margin: 0;
-	background-color: #000026;
+	background-color: #6B0000;
 }
 .rightSide
 {
@@ -41,7 +41,7 @@ html, body
 	margin-top: 30px;
 	margin-left: 30px;
 	margin-right: 30px;
-	background-color: #003366;
+	background-color: #A00000;
 }
 .membersButton
 {
@@ -119,10 +119,21 @@ html, body
 {
 	height: 50%;
 }
+.mainHeaderLogo
+{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px ;
+	padding-right: 10px;
+}
 .headerLogo
 {
 	padding-top: 20px;
 	padding-bottom: 20px;
 	padding-left: 20px ;
 	padding-right: 20px;
+}
+.topPadding
+{
+	padding-top: 5%;
 }
