--- a/Assignments/abrand/Final Project Avengers/site(12).css
+++ b/Assignments/abrand/Final Project Avengers/site(12).css
@@ -37,13 +37,18 @@ html
 	float: right;
 	color: white;
 	background-color: #1d3d93;
-	height: 1000px;
+	height: 1200px;
 	padding-top: 10px;
 }
 
 .white
 {
 	color: white;
+}
+
+.fontsize
+{
+	font-size: 30pt;
 }
 
 
